# diffly

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml  typos.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  chore.yml  ci.yml  copilot-setup-steps.yml  scorecard.yml
conda.recipe/: recipe.yaml
diffly/: __init__.py  _cache.py  _compat.py  _conditions.py  _utils.py  cli.py  comparison.py  summary.py  testing.py
docs/: conf.py  index.md  index.rst
docs/api/: data_comparison.rst  diffly.cli.rst  diffly.comparison.rst  diffly.rst  diffly.summary.rst  diffly.testing.rst  index.rst  modules.rst  schema_comparison.rst  summary.rst  testing.rst
docs/guides/: development.md  index.md  quickstart.ipynb  quickstart.md
docs/guides/features/: cli.md  index.md  investigating.ipynb  investigating.md  summary.ipynb  testing.md  tolerances.ipynb  tolerances.md
docs/guides/features/data/: current_load.csv  previous_load.csv
tests/: test_assert_collection_equal.py  test_assert_frame_equal.py  test_cache.py  test_change_counts.py  test_conditions.py  test_dataframe_comparison.py  test_enums_and_categoricals.py  test_equal.py  test_equal_num_rows.py  test_fraction_same.py  test_joined.py  test_joined_equal_unequal.py  test_left_right.py  test_left_right_only.py  test_performance.py  test_schemas.py  test_utils.py  utils.py
tests/cli/: test_cli.py
tests/summary/: README.md  test_summary.py
tests/summary/fixtures/added_and_removed_columns/: test_added_and_removed_columns.py
tests/summary/fixtures/added_and_removed_columns_dtypes/: test_added_and_removed_columns_dtypes.py
tests/summary/fixtures/added_columns/: test_added_columns.py
tests/summary/fixtures/custom_names/: test_custom_names.py
tests/summary/fixtures/custom_names_long/: test_custom_names_long.py
tests/summary/fixtures/custom_names_odd/: test_custom_names_odd.py
tests/summary/fixtures/empty_left_right/: test_empty_left_right.py
tests/summary/fixtures/equal_df_no_pk/: test_equal_df_no_pk.py
tests/summary/fixtures/equal_non_empty/: test_equal_non_empty.py
tests/summary/fixtures/equal_non_empty_different_columns/: test_equal_non_empty_different_columns.py
tests/summary/fixtures/gained_all/: test_gained_all.py
tests/summary/fixtures/gained_rows_only/: test_gained_rows_only.py
tests/summary/fixtures/hidden_columns/: test_hidden_columns.py
tests/summary/fixtures/lists_of_values/: test_list_of_values.py
(+17 files in other folders)
